[Frontend] Avoid extraneous line breaks at hidden whitespace

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -292,6 +292,9 @@ body {
   white-space: pre;
   overflow: auto;
 }
+.message-text .hidden.whitespace {
+  display: block;
+}
 
 .message-text .embed-outer {
   margin: 1px 0;
